# SimpleDB

./: CMakeLists.txt  README.md
SimpleDB++/: All.h  Column.cpp  Column.h  Database.cpp  Database.h  Query.cpp  Query.h  Row.cpp  Row.h
example/: main.cpp
